2007-03-25  Dalibor Topic  <robilad@kaffe.org>

	* doc/cp-tools.texinfo: Fix node ordering.

2007-03-19  Matthias Klose  <doko@ubuntu.com>

	* doc/Makefile.am: Build a gcjh(1) man page.
	* doc/cp-tools.texinfo: Add documentation for gcjh.

2007-03-23  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/ServerSocket.java (implAccept): set implCreated flag on
	socket.
	* java/net/Socket.java (implCreated): Make package accessible for
	ServerSocket.

2007-03-22  Casey Marshall  <csm@gnu.org>

	* gnu/javax/net/ssl/provider/ClientHandshake.java (RSAGen.implRun):
	check keyEncipherment bit of the certificate, and just pass the public
	key to the cipher.

2007-03-20  Mario Torre  <neugens@limasoftware.net>

	* configure.ac: GConf requirement for building the java.util.prefs backend
	are relaxed down to version 2.6.0 (instead of 2.11.2).

2007-03-19  Mario Torre  <neugens@limasoftware.net>

	* gnu/java/awt/peer/KDEDesktopPeer.java: 
	(mail): Fixed error dialog in KDE when the mail method is called without
	argument; now opens the default mailer with a blank window.
	(getCommand): Handle the use of kprinter as default print command for KDE.
	(supportCommand): Enable the print command when a KDE desktop is detected.

2007-03-19  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/Socket.java
	(implCreated): New field.
	(getImpl): Call impl.create() if it hasn't been called yet.
	(bind): Removed explicit impl.create() call.

2007-03-18  Mark Wielaard  <mark@klomp.org>

	* javax/crypto/CipherOutputStream.java (write): Use out.write()
	not super.write().

2007-03-18  Mark Wielaard  <mark@klomp.org>

	* configure.ac (COMPILE_PLUGIN): Check for gtk+-2.0 >= 2.8
	gthread-2.0 >= 2.2 and gdk-pixbuf-2.0

2007-03-16  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/Main.java (run): Use class'
	name in File case.

2007-03-16  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* resource/com/sun/tools/javac/messages.properties