@@ -1,3 +1,9 @@
+2007-03-26  Stepan Kasal  <skasal@redhat.com>
+
+	* tools/gnu/classpath/tools/javah/Main.java (cniOrJniSeen): New
+	field.
+	(getParser): Use new field.
+
 2007-03-25  Dalibor Topic  <robilad@kaffe.org>
 
 	* doc/cp-tools.texinfo: Fix node ordering.
